@@ -1,5 +1,7 @@
 Revision history for Perl extension CGI::Header::PSGI.
 
+  - Require CGI::Header 0.51 or higher
+
 0.13  Apr 22nd, 2013
 
   - Requires CGI::Header 0.49 or higher
